[tool.poetry]
name = "belt-imu-mode"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "belt_imu_mode"}]

[tool.poetry.dependencies]
python = "^3.8"
pybelt = "^1.0.5"
pyserial = "^3.5"
pillow = "^9.4.0"
pylint = "^2.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
